<resources>
    <string name="An_error_occurred_while_executing_a_server_request">An error occurred while executing a server request</string>
    <string name="Analytics">Analytics</string>
    <string name="Analytics_description">This part of Academy is dedicated to professionals of betting. We tell about some aspects of expert analytics: math, psychology and difficult betting systems</string>
    <string name="Another_question">Another question</string>
    <string name="Attention_The_forecast_has_already_been_paid">Attention: The forecast has already been paid</string>
    <string name="Basis">Basis</string>
    <string name="Basis_description">This part of Academy is created for beginners, who have just started to learn betting. We tell about some basic but very important things: how bookmakers work, what the most popular bets are and how to avoid some typical mistakes in betting.</string>
    <string name="Beating_totals">Beating totals</string>
    <string name="Betting_first_steps">Betting: first steps</string>
    <string name="Betting_strategies">Betting strategies</string>
    <string name="Betting_strategies_description">This part of Academy is dedicated to most popular betting strategies for beginners and experienced players.</string>
    <string name="Bonus">Bonus</string>
    <string name="Bonuses">Bonuses</string>
    <string name="Both_teams_to_score">“Both teams to score” bet – some things to pay attention on</string>
    <string name="Corridor_betting">Corridor betting</string>
    <string name="DelayStavkaBonus">Place a bet and get a bonus</string>
    <string name="DelayStavkaBonus1">Get bonus from partners</string>
    <string name="DelayStavkaBonusBtn">Place a bet</string>
    <string name="DelayStavkaBonusBtn1">Get bonus</string>
    <string name="Express">Express</string>
    <string name="For_beginners">For beginners</string>
    <string name="For_beginners_and_experienced">For beginners and experienced</string>
    <string name="For_beginners_and_experienced_Betting_strategies">Flat Betting.</string>
    <string name="For_professionals">For professionals</string>
    <string name="FrequentlyAskedQuestions">Frequently Asked Questions</string>
    <string name="GetExpress">Get express</string>
    <string name="GetForecast">Get forecast</string>
    <string name="Get_bonus">Get bonus</string>
    <string name="Get_trained_in_our_academy_and_increase_your_chances_of_winning_every_day">Train in our Academy and increase your chances of winning every day.</string>
    <string name="Get_your_first_forecast_from_the_best_cappers">Get your first forecast from the best cappers!</string>
    <string name="GoToDescription">Go to description</string>
    <string name="Going_deeper_bets_on_cards_and_corners">Going deeper: bets on cards and corners</string>
    <string name="How_to_get_a_bonus">How to get a bonus</string>
    <string name="KindOfSport">Kind of sport</string>
    <string name="Lack_of_internet_connection">Lack of internet connection</string>
    <string name="Learn_together_with_us_1part">Learn</string>
    <string name="Learn_together_with_us_2part">together with us</string>
    <string name="Math_bets">Math bets</string>
    <string name="PickUpAGift">Pick up a gift</string>
    <string name="PurchasesTerms">Terms of purchase and return</string>
    <string name="QuestionHowDoIOpenAExpressForecast">How do I open an express forecast?</string>
    <string name="QuestionHowDoIOpenAPremiumForecast">How do I open a premium forecast?</string>
    <string name="QuestionHowDoIPlaceABet">How do I place a bet?</string>
    <string name="QuestionHowDoISubscribe">How do I subscribe?</string>
    <string name="QuestionHowToViewTheLiveForecast">How to view the live forecast?</string>
    <string name="QuestionWhatStrategyShouldIUse">What strategy should I use?</string>
    <string name="ROI_for_the_old_time">ROI all the time</string>
    <string name="Rational_income_maximization_principle">Rational income maximization principle</string>
    <string name="ResponsibleGamingActivityTittle">Responsible gaming</string>
    <string name="Send_an_email">Send an email</string>
    <string name="Send_purchase_info">Send purchase information</string>
    <string name="Sports_betting_has_never_been_so_successful_like_we_have">Sports betting has never been more successful than with us.</string>
    <string name="SubscriptionTermsWithPrice">%1$s/%2$s Subscription terms</string>
    <string name="Test_the_push_notification">Test the push notification</string>
    <string name="Text2YouAreAwardedAFreeBonusExpress">You can use it to purchase any other Express Forecast. Express forecasts appear in the app every day.</string>
    <string name="Text2YouAreAwardedAFreeBonusPremium">You can use it to purchase any other Premium Forecast. Premium forecasts appear in the app every day.</string>
    <string name="TextArrow">→</string>
    <string name="The_payment_operation_has_not_been_completed">The payment operation has not been completed</string>
    <string name="There_s_a_gift_for_you">There\'s a gift for you</string>
    <string name="There_s_a_gift_for_you_text">Thank you for your payment. Click the button below and pick up a gift from the partners!</string>
    <string name="Total_ratio">Total odds</string>
    <string name="Types_of_bets">Types of bets</string>
    <string name="Typical_mistakes">Typical mistakes</string>
    <string name="Value_betting_how_good_is_your_intuition">Value betting: how good is your intuition?</string>
    <string name="Victory_starts_here_1part">Victory</string>
    <string name="Victory_starts_here_2part">starts here</string>
    <string name="W1_OT">П1+ОТ</string>
    <string name="W1_OT_description">Прогноз с таким исходом считается прошедшим, если первая команда победила в основное или в дополнительное время</string>
    <string name="W1_OT_name">Подстраховка победы первой команды, если она была добыта в дополнительное время или в серии пенальти</string>
    <string name="W1_OT_note">В некоторых конторах называется как \"Итоговая Победа 1\"</string>
    <string name="W2_OT">П2+ОТ</string>
    <string name="W2_OT_description">Прогноз с таким исходом считается прошедшим, если вторая команда победила в основное или в дополнительное время</string>
    <string name="W2_OT_name">Подстраховка победы второй команды, если она была добыта в дополнительное время или в серии пенальти</string>
    <string name="W2_OT_note">В некоторых конторах называется как \"Итоговая Победа 2\"</string>
    <string name="What_is_losing_streak_and_how_to_deal_with_it">What is losing streak and how to deal with it?</string>
    <string name="Why_does_psychology_matter">Why does psychology matter?</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account">Account</string>
    <string name="advanced_analytics_pass_80">Advanced analytics. Success +%1$s</string>
    <string name="afterRegister">Thank you for registering! You will soon receive your bonus via e-mail</string>
    <string name="all_forecasts">All predictions</string>
    <string name="analytics_and_statistics">Analytics and statistics</string>
    <string name="android.credentials.TYPE_PASSWORD_CREDENTIAL">Password</string>
    <string name="androidx.credentials.TYPE_PUBLIC_KEY_CREDENTIAL">Passkey</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Sports insider</string>
    <string name="app_need_update">You need to update the application, as support for your version will soon be discontinued.</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="archive_description">You have viewed all predictions for today. Below is the archive of predictions from the past year.</string>
    <string name="attention">Attention</string>
    <string name="authText">and receive a bonus from our partners</string>
    <string name="auth_screen">Authentication screen</string>
    <string name="awaiting">Pending</string>
    <string name="awaiting_result">Waiting for the result</string>
    <string name="be_the_best">BE THE BEST\nANALYST</string>
    <string name="bet">bet</string>
    <string name="bets_on_total_match">Bets on match total</string>
    <string name="betting_training">Betting training</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="btn_text_subscribe">Subscribe</string>
    <string name="cadastre">Register</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="event">Announcement</string>
    <string name="express_bonus">Express Bonus</string>
    <string name="faq">FAQ</string>
    <string name="help">Help</string>
    <string name="notifications">Notifications</string>
    <string name="premium">Premium</string>
    <string name="premium_bonus">Premium bonus</string>
    <string name="search">Search</string>
    <string name="setting_event_close">Close</string>
    <string name="setting_event_description_text">Get instant notifications about new predictions and catch the high odds.</string>
    <string name="setting_event_new_prognoz_text">New prediction</string>
    <string name="setting_event_new_result_text">Match results</string>
    <string name="setting_event_tittle">Notification settings</string>
    <string name="settings">Settings</string>
    <string name="supportBtnText">SEND</string>
    <string name="supportHint">Your question:</string>
    <string name="supportText">Write your question to your personal manager. \nWe will answer as soon as possible.</string>
    <string name="watching">Favorites</string>
</resources>