<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/game"
        android:visible="false"
        android:title="GAME"
        app:actionLayout="@layout/layout_menu_item_game"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/gift"
        android:id="@+id/gift"
        android:visible="false"
        android:title="gift"
        app:actionLayout="@layout/layout_menu_item_gift"
        app:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/ic_setting"
        android:id="@+id/settings"
        android:visible="true"
        android:title="@string/settings"
        app:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/ic_monetization"
        android:id="@+id/purchaseInfo"
        android:title="@string/Send_purchase_info"
        app:showAsAction="withText"/>
    <item
        android:icon="@drawable/ic_support"
        android:id="@+id/sendMail"
        android:title="@string/Send_an_email"
        app:showAsAction="withText"/>
    <item
        android:icon="@drawable/ic_support"
        android:id="@+id/testPushNotification"
        android:title="@string/Test_the_push_notification"
        app:showAsAction="withText"/>
    <item
        android:icon="@drawable/ic_un_saved_24"
        android:id="@+id/save_prediction"
        android:visible="true"
        android:title="@string/watching"
        app:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/check_gray"
        android:id="@+id/change_tick"
        android:visible="true"
        android:title="@string/notifications"
        app:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/ic_refresh"
        android:id="@+id/refresh_menu_btn"
        android:visible="true"
        android:title="Refresh"
        app:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/ic_faq"
        android:id="@+id/icFaq"
        android:visible="true"
        android:title="@string/faq"
        app:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/ic_monetization"
        android:id="@+id/bonusItem"
        android:visible="false"
        android:title="@string/premium_bonus"
        app:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/ic_filter"
        android:id="@+id/filter"
        android:visible="false"
        android:title="@string/settings"
        app:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/ic_question"
        android:id="@+id/managerQuestion"
        android:visible="true"
        android:title="@string/help"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/ic_setting"
        android:id="@+id/supportSendMail"
        android:visible="false"
        android:title="@string/settings"
        app:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/ic_search"
        android:id="@+id/action_search"
        android:visible="false"
        android:title="@string/search"
        android:iconTint="@color/colorWhite"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always"/>
    <item
        android:icon="@drawable/ic_notification"
        android:id="@+id/announcement"
        android:visible="false"
        android:title="@string/event"
        app:actionLayout="@layout/layout_menu_item_announcement"
        app:showAsAction="always"/>
    <item
        android:id="@+id/bonusOptionMenuItem"
        android:visible="false"
        android:title="@string/Bonuses"
        app:actionLayout="@layout/new_bonus_toollbar"
        app:showAsAction="always"/>
    <item
        android:id="@+id/expressBonusItem"
        android:title="@string/express_bonus"
        app:actionLayout="@layout/new_bonus_express_toolbar"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/ic_notification"
        android:id="@+id/notification"
        android:visible="true"
        android:title="@string/notifications"
        app:showAsAction="always"/>
</menu>
