<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="45dp">
    <TextView
        android:textSize="@dimen/setting_event_title_textSize"
        android:textStyle="normal"
        android:textColor="@color/colorBlackDE"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/setting_event_title_marginTop"
        android:text="@string/setting_event_tittle"
        android:lineSpacingExtra="8sp"
        android:fontFamily="@font/arimo_regular"
        android:layout_marginStart="@dimen/setting_event_elem_marginleft"
        android:layout_marginEnd="@dimen/setting_event_elem_marginleft"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="15dp">
        <TextView
            android:textSize="@dimen/setting_event_elem_textsize"
            android:textStyle="normal"
            android:textColor="@color/colorBlackDE"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_event_new_prognoz_text"
            android:lineSpacingExtra="6sp"
            android:fontFamily="@font/arimo_regular"
            android:layout_marginStart="@dimen/setting_event_elem_marginleft"/>
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_gravity="end|center_vertical"
            android:id="@+id/new_prognoz_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"/>
    </FrameLayout>
    <FrameLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="15dp">
        <TextView
            android:textSize="@dimen/setting_event_elem_textsize"
            android:textStyle="normal"
            android:textColor="@color/colorBlackDE"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_event_new_result_text"
            android:lineSpacingExtra="6sp"
            android:fontFamily="@font/arimo_regular"
            android:layout_marginStart="@dimen/setting_event_elem_marginleft"/>
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_gravity="end|center_vertical"
            android:id="@+id/new_result_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"/>
    </FrameLayout>
    <TextView
        android:textSize="@dimen/setting_event_description_textsize"
        android:textStyle="normal"
        android:textColor="@color/colorBlack8A"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginStandart"
        android:text="@string/setting_event_description_text"
        android:lineSpacingExtra="2sp"
        android:fontFamily="@font/arimo_regular"
        android:layout_marginStart="@dimen/marginStandart"
        android:layout_marginEnd="@dimen/setting_event_elem_marginleft"/>
    <com.google.android.material.button.MaterialButton
        android:textSize="@dimen/setting_event_elem_textsize"
        android:textStyle="normal"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:layout_gravity="end"
        android:id="@+id/setting_event_close"
        android:background="@null"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginTop="@dimen/marginStandart"
        android:text="@string/setting_event_close"
        android:fontFamily="sans-serif-medium"/>
</LinearLayout>
