<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal"
    android:background="@android:color/transparent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <FrameLayout
        android:id="@+id/hynia"
        android:background="@drawable/background_hynia"
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@+id/backGradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <FrameLayout
        android:id="@+id/backGradient"
        android:background="@drawable/background_placeholder_gift"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hynia"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="457dp"
        android:layout_marginTop="35dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"/>
    <TextView
        android:textSize="32sp"
        android:textColor="@color/colorWhite"
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/There_s_a_gift_for_you"
        android:fontFamily="@font/arimo_bold"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@+id/backGradient"/>
    <TextView
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/There_s_a_gift_for_you_text"
        android:alpha="0.75"
        android:fontFamily="@font/arimo_regular"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/title"/>
    <com.google.android.material.button.MaterialButton
        android:gravity="center"
        android:id="@+id/gift"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="24dp"
        android:maxWidth="328dp"
        android:text="@string/PickUpAGift"
        android:textAlignment="gravity"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/ButtonMenuOptionPickUpAGift"/>
</androidx.constraintlayout.widget.ConstraintLayout>
