<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipe_refresh_bonus"
    android:background="#20003f"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="12dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="32dp"
        android:paddingEnd="16dp">
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:id="@+id/prem_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:gravity="center_vertical"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/premium"
                    android:textAlignment="gravity"/>
                <TextView
                    android:textSize="14sp"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"
                    android:layout_gravity="end"
                    android:id="@+id/prem_count"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAlignment="gravity"/>
                <TextView
                    android:textSize="14sp"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"
                    android:layout_gravity="end"
                    android:id="@+id/prem_count_x"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="x"
                    android:textAlignment="gravity"/>
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="16dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_monetization"/>
            </LinearLayout>
            <TextView
                android:textSize="12sp"
                android:textColor="@color/gray9"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Text2YouAreAwardedAFreeBonusPremium"
                android:textAlignment="gravity"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:id="@+id/express_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:gravity="center_vertical"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Express"
                    android:textAlignment="gravity"/>
                <TextView
                    android:textSize="14sp"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"
                    android:layout_gravity="end"
                    android:id="@+id/express_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="gravity"/>
                <TextView
                    android:textSize="14sp"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"
                    android:layout_gravity="end"
                    android:id="@+id/express_count_x"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="x"
                    android:textAlignment="gravity"/>
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="16dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_monetization"/>
            </LinearLayout>
            <TextView
                android:textSize="12sp"
                android:textColor="@color/gray9"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Text2YouAreAwardedAFreeBonusExpress"
                android:textAlignment="gravity"/>
        </LinearLayout>
        <com.sports.insider.ui.views.HowToGetABonusBtn
            android:id="@+id/btn_How_to_get_a_bonus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
