<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#20003f"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:id="@+id/fast_ask_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:translationZ="0.77dp"
            android:elevation="0.5dp">
            <TextView
                android:textSize="15sp"
                android:textColor="#f3f3f3"
                android:gravity="center_vertical"
                android:id="@+id/correctionsTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="33dp"
                android:layout_marginBottom="13dp"
                android:text="@string/supportText"
                android:fontFamily="@font/arimo_regular"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>
        </FrameLayout>
        <com.sports.insider.ui.views.LineDivGradientView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
        <TextView
            android:textSize="24sp"
            android:textStyle="normal"
            android:textColor="@color/colorWhite"
            android:gravity="center_vertical"
            android:id="@+id/correctionsLongtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:text="@string/supportHint"
            android:layout_below="@+id/fast_ask_tittle"
            android:layout_centerHorizontal="true"
            android:lineSpacingExtra="8sp"
            android:fontFamily="@font/arimo_bold"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
        <EditText
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarStyle="insideInset"
            android:textColor="#000000"
            android:gravity="start"
            android:id="@+id/supportInputField"
            android:background="@drawable/support_edittext_background"
            android:padding="12dp"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:minHeight="200dp"
            android:layout_above="@+id/supportOkButton"
            android:layout_below="@+id/correctionsLongtext"
            android:layout_centerHorizontal="true"
            android:inputType="textMultiLine"
            android:isScrollContainer="true"
            android:fadeScrollbars="true"
            android:overScrollMode="always"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
        <Button
            android:textSize="@dimen/textSize"
            android:textStyle="normal"
            android:textColor="@color/colorWhite"
            android:id="@+id/supportOkButton"
            android:background="@drawable/blue_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="16dp"
            android:text="@string/supportBtnText"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/arimo_regular"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:stateListAnimator="@animator/button_animator"/>
    </LinearLayout>
</ScrollView>
